<resources>
    <string name="app_name">Petly</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="account_type">Account Type</string>
    <string name="account_type_adopt">To adopt</string>
    <string name="account_type_organization">Organization</string>
    <string name="account_type_shelter">Shelter</string>
    <string name="account_type_agent">Bid / Agent</string>
    <string name="login_as_admin"><u>Login As Admin</u> </string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="post_dog">Post Dog</string>
    <string name="email">Email</string>
    <string name="set_characteristics">Set Characteristics</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_city">Enter Dog City</string>
    <string name="enter_about">Enter Dog About</string>
    <string name="enter_breed">Enter Breed Name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="password_not_match">Password not Matched</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="no_dog_found">No dogs found!</string>
    <string name="change_character">Try to change some<font color='#b1cda0'> Characteristics</font></string>
    <string name="reload">or<font color='#b1cda0'> Reload</font></string>
    <string name="no_account">Don\'t Have An Account?<font color='#b1cda0'> Register For Free</font></string>
    <string name="have_account">Already Have An Account?<font color='#b1cda0'> Login</font></string>
    <string name="title_activity_organization_home">OrganizationHomeActivity</string>
    <string name="title_post">Post</string>
    <string name="title_request">Requests</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="experience_with_human">Experienced with Human</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dog_size">Dog Size</string>
    <string name="dog_gender">Dog Gender</string>
    <string name="small">Small</string>
    <string name="middle">Middle</string>
    <string name="large">Large</string>
    <string name="handicap">Dog Have a handicap</string>
    <string name="age_range">Age Range</string>
    <string name="age_range_puppy">Puppy</string>
    <string name="age_range_junior">Junior</string>
    <string name="age_range_adult">Adult</string>
    <string name="age_range_senior">Senior</string>
    <string name="feminine">Feminine</string>
    <string name="masculine">Masculine</string>
    <string name="does_not_matter">Doesn\'t Matter</string>
    <string name="compatible_with_cats">Compatible with Cats</string>
    <string name="compatible_with_children">Compatible with Children</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="dog_city">Dog City</string>
    <string name="dog_about">About the Dog</string>
    <string name="match_list">Match List</string>
    <string name="my_request">My Requests</string>
    <string name="no_post_found">No Post Found</string>
    <string name="you_have_experience">You have experience with dogs?</string>
    <string name="your_dog_should">Your dog should be?</string>
    <string name="how_big_dog">How big should your dog be?</string>
    <string name="handicap_dog">Can you dog have a handicap?</string>
    <string name="your_dog_with_cats">Your dog should be compatible with cats?</string>
    <string name="your_dog_with_children">Your dog should be compatible with children?</string>
    <string name="request_message_success">Request Saved Successfully</string>
    <string name="request_message_cancel">Request Cancel Successfully</string>
    <string name="request_message_success_already">Requested Already</string>
    <string name="request_message_failed">Request Failed!</string>
    <string name="post_message_success">Post Saved Successfully</string>
    <string name="post_message_delete">Post Deleted Successfully</string>
    <string name="post_message_failed">Post Failed!</string>
    <string name="error_deleting">Error Deleting the post</string>
    <string name="match_characteristics">Match Characteristics</string>
    <string name="title_match">Match</string>
    <string name="cancel">Cancel</string>
    <string name="write_message">Write A Message</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="deleteDog">Delete Dog</string>
    <string name="deletingADog">Delete this animal?</string>
    <string name="update">Update</string>
    <string name="sickness">About social media</string>
    <string name="died">Died 😢(Good journey over the rainbow bridge)</string>
    <string name="otherReason">Offline</string>
    <string name="adopted">About Petly</string>
    <string name="letUsKnowReason">🎉Yay, great that your pelt-nose has found a home. Let us know how.</string>
    <string name="selectReasons">Please select the reasons:</string>
    <string name="pleaseEnterPassword">Please enter password to update.</string>
    <string name="emailMessage">A email will be send to your registered email for password reset.</string>
    <string name="update_post">Update Post</string>
    <string name="delete">Delete</string>
    <string name="no_user_found">No User Found</string>
    <string name="user_list">User List</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="type">Type</string>
    <string name="services">Services</string>
    <string name="blog">Blog</string>
    <string name="shop">Shop</string>
    <string name="liabilityInsurance">Liability insurance</string>
    <string name="surgicalProtection">Surgical protection</string>
    <string name="toPetlyShop">To the Petly Shop</string>
    <string name="healthInsurance">Health insurance</string>
    <string name="insurance">Insurance</string>
    <string name="petlyCommunity">Petly Community</string>
    <string name="knowledgeBase">Knowledge base</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="message_not_approved">Your Profile needs to be approved by an administrator. You will receive an email as soon as your profile is approved.</string>
    <string name="updatePassword">Update Password</string>
    <string name="passwordUpdatedSuccessfully">Password updated successfully</string>
    <string-array name="states_germany">
        <item>Baden-Württemberg</item>
        <item>Bayern</item>
        <item>Berlin</item>
        <item>Brandenburg</item>
        <item>Bremen</item>
        <item>Hamburg</item>
        <item>Hessen</item>
        <item>Mecklenburg-Vorpommern</item>
        <item>Niedersachsen</item>
        <item>Nordrhein-Westfalen</item>
        <item>Rheinland-Pfalz</item>
        <item>Saarland</item>
        <item>Sachsen</item>
        <item>Sachsen-Anhalt</item>
        <item>Schleswig-Holstein</item>
        <item>Thüringen</item>
    </string-array>
    <string-array name="states_europe">
        <item>Albanien</item>
        <item>Andorra</item>
        <item>Belgien</item>
        <item>Bosnien und Herzegowina</item>
        <item>Bulgarien</item>
        <item>Dänemark</item>
        <item>Estland</item>
        <item>Finnland</item>
        <item>Frankreich</item>
        <item>Griechenland</item>
        <item>Irland</item>
        <item>Island</item>
        <item>Italien</item>
        <item>Kasachstan</item>
        <item>Kosovo</item>
        <item>Kroatien</item>
        <item>Lettland</item>
        <item>Liechtenstein</item>
        <item>Litauen</item>
        <item>Luxemburg</item>
        <item>Malta</item>
        <item>Moldawien</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Niederlande</item>
        <item>Nordmazedonien</item>
        <item>Norwegen</item>
        <item>Österreich</item>
        <item>Polen</item>
        <item>Portugal</item>
        <item>Rumänien</item>
        <item>Russland</item>
        <item>San Marino</item>
        <item>Schweden</item>
        <item>Schweiz</item>
        <item>Serbien</item>
        <item>Slowakei</item>
        <item>Slowenien</item>
        <item>Spanien</item>
        <item>Tschechien</item>
        <item>Türkei</item>
        <item>Ukraine</item>
        <item>Ungarn</item>
        <item>Vatikan</item>
        <item>Vereinigtes Königreich</item>
        <item>Weißrussland</item>
    </string-array>
    <string-array name="states_usa">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="states_morroko">
        <item>Tangier-Tetouan-Al Hoceima</item>
        <item>Oriental</item>
        <item>Fes-Meknes</item>
        <item>Rabat-Sale-Kenitra</item>
        <item>Beni Mellal-Khenifra</item>
        <item>Casablanca-Settat</item>
        <item>Marrakech-Safi</item>
        <item>Draa-Tafilalet</item>
        <item>Souss-Massa</item>
        <item>Guelmim-Oued Noun</item>
        <item>Laayoune-Sakia El Hamra</item>
        <item>Dakhla-Oued Ed-Dahab</item>
    </string-array>
</resources>