<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_account">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/forgotPassword"
        android:textColor="@color/black"
        android:textSize="17.0sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginRight="40.0dip"
        android:text="@string/emailMessage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14.0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="46.0dip"
        android:layout_marginHorizontal="10.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="15.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@drawable/bg_edittext"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginBottom="10.0dip"
        android:orientation="horizontal"
        android:padding="5.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateButton"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/bg_account"
            android:text="@string/send" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="8.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/bg_account"
            android:text="@string/cancel" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>